--- a/sections/cstm-featured-collection.liquid
+++ b/sections/cstm-featured-collection.liquid
@@ -152,7 +152,7 @@
                 endcase
               %}
               {%- assign placeholder_image = 'product-apparel-' | append: ridx -%}
-              {% render 'cst-card-product',
+              {% render 'cstm-card-product',
                 show_vendor: section.settings.show_vendor,
                 media_aspect_ratio: section.settings.image_ratio,
                 image_shape: section.settings.image_shape,
