--- a/sections/cstm-featured-blog.liquid
+++ b/sections/cstm-featured-blog.liquid
@@ -82,7 +82,7 @@
                 style="--animation-order: {{ forloop.index }};"
               {% endif %}
             >
-              {% render 'article-card',
+              {% render 'cstm-article-card',
                 blog: section.settings.blog,
                 article: article,
                 media_aspect_ratio: 1.2,
