--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -627,7 +627,7 @@
             {%- form 'localization', id: 'FooterCountryForm', class: 'localization-form' -%}
               <div>
                 <h2 class="caption-large text-body" id="FooterCountryLabel">{{ 'localization.country_label' | t }}</h2>
-                {%- render 'country-localization', localPosition: 'FooterCountry' -%}
+                {%- render 'cstm-country-localization', localPosition: 'FooterCountry' -%}
               </div>
             {%- endform -%}
           </localization-form>
@@ -640,7 +640,7 @@
                 <h2 class="caption-large text-body" id="FooterLanguageLabel">
                   {{ 'localization.language_label' | t }}
                 </h2>
-                {%- render 'language-localization', localPosition: 'FooterLanguage' -%}
+                {%- render 'cstm-language-localization', localPosition: 'FooterLanguage' -%}
               </div>
             {%- endform -%}
           </localization-form>
@@ -882,20 +882,6 @@
       "default": true,
       "label": "t:sections.footer.settings.show_social.label",
       "info": "t:sections.footer.settings.show_social.info"
-    },
-    {
-      "type": "checkbox",
-      "id": "enable_country_selector",
-      "default": true,
-      "label": "t:sections.footer.settings.enable_country_selector.label",
-      "info": "t:sections.footer.settings.enable_country_selector.info"
-    },
-    {
-      "type": "checkbox",
-      "id": "enable_language_selector",
-      "default": true,
-      "label": "t:sections.footer.settings.enable_language_selector.label",
-      "info": "t:sections.footer.settings.enable_language_selector.info"
     },
     {
       "type": "checkbox",
