--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -191,7 +191,7 @@
         </div>
 
         {% if section.settings.button_link %}
-          <a href="{{ section.settings.button_link }}" class="browse-btn">
+          <a href="{{ section.settings.button_link }}" class="button button--primary">
             {{ section.settings.button_label }}
           </a>
         {% endif %}
@@ -241,15 +241,6 @@
   .colorful-kicks-section p {
     font-size: 16px;
     color: #333;
-  }
-  .browse-btn {
-    display: inline-block;
-    margin-top: 20px;
-    background: #ff3c00;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 4px;
-    text-decoration: none;
   }
   .product-image-wrapper {
     position: relative;
