--- a/sections/performance-banner.liquid
+++ b/sections/performance-banner.liquid
@@ -53,7 +53,7 @@
     {% endif %}
     <h2>{{ section.settings.heading }}</h2>
     <p>{{ section.settings.description }}</p>
-    <div><a href="{{ section.settings.button_links }}" class="btn">{{ section.settings.button_label }}</a></div>
+    <div><a href="{{ section.settings.button_links }}" class="button button--primary">{{ section.settings.button_label }}</a></div>
   </div>
   </div>
   <div class="image-content">
